--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   </head>
   <body>
     <h1>Hello world, I'm Lucky.</h1>
+    <a href="./about/index.html">About Lucky</a>
+    <a href="./blogs/index.html">Lucky blogs</a>
   </body>
 </html>
